--- a/style.css
+++ b/style.css
@@ -1,9 +1,49 @@
-h1 {
-  font-family: 'Helvetica';
-  text-align: center;  
+*{
+  font-family: Helvetica;
 }
 
-h2 {
-  font-family: 'Helvetica';
+h1 {  
+  text-align: center; 
+  font-size: 50px;
+  color: rgba(50, 50, 50, 0.5); 
+}
+
+h2 {  
   text-align: center;
+  font-size: 35px;
+  color: rgba(0, 0, 0, 0.7);   
+}
+
+h3 {
+  font-size: 25px;
+  color: white;
+  text-rendering: optimizeLegibility; 
+}
+
+p,
+ul,
+ol {
+  font-family: 'Helvetica';
+  font-size: 15;
+}
+
+.contenedor-modulos {
+  font-size: 18px;
+  display: flex;
+  justify-content: center;	
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 500px;  
+  background-color:rgb(44, 54, 69);
+}
+
+.modulo {
+  text-align: center;
+  border-radius: 20%;
+  border: 3px;
+  border-color: white;  
+  width: 33%;
+  height: 400px;
+  padding: 5px;   
 }
