--- a/style.css
+++ b/style.css
@@ -3,11 +3,16 @@
 }
 
 header {
-  height: 120px;
+  height: 100px;
+  position: static;
+}
+
+.logo {
+  height: 100px;  
 }
 
 .titulo {
-  position: absolute;
+  position: static;
 }
 
 h1 {  
@@ -35,23 +40,38 @@ ol {
   font-size: 15;
 }
 
-.contenedor-modulos {
-  font-size: 18px;
+.fondo-azul {
+  background-color:rgb(44, 54, 69);
   display: flex;
+  flex-flow: column;  
   justify-content: center;	
   align-items: center;
-  text-align: center;
   width: 100%;
   height: 500px;  
-  background-color:rgb(44, 54, 69);
 }
 
-.modulo {
-  text-align: center;
-  border-radius: 20%;
-  border: 3px;
-  border-color: white;  
-  width: 33%;
+.modulos {
+  display: flex;
+  flex-flow: row;    
+  justify-content: center;	
+  align-items: center;  
+  border: 3px;   
+  width: 33.333%;
   height: 400px;
-  padding: 5px;   
+  padding: 10px;
+  margin: 10px;
+  background-color: whitesmoke;     
 }
+
+.titulos-modulos {
+  text-align: center; 
+  width: 100%;
+  height: 100px; 
+}
+
+.imagen-modulo img{
+  border-radius: 15%;
+  width: 100%;
+}
+
+
