--- a/style.css
+++ b/style.css
@@ -43,35 +43,38 @@ ol {
 .fondo-azul {
   background-color:rgb(44, 54, 69);
   display: flex;
-  flex-flow: column;  
-  justify-content: center;	
-  align-items: center;
+  flex-direction: row;  
+  justify-content: space-evenly;	
   width: 100%;
   height: 500px;  
 }
 
 .modulos {
   display: flex;
-  flex-flow: row;    
-  justify-content: center;	
-  align-items: center;  
-  border: 3px;   
-  width: 33.333%;
-  height: 400px;
-  padding: 10px;
-  margin: 10px;
-  background-color: whitesmoke;     
+  flex-direction: column;  
+  justify-content: space-around;
+  width: 30%;
 }
 
 .titulos-modulos {
-  text-align: center; 
+  text-align: center;
+  height: 100px;  	 
+  width: 100%;   
+}
+
+.imagen-modulo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   width: 100%;
-  height: 100px; 
 }
 
 .imagen-modulo img{
-  border-radius: 15%;
+  border-radius: 10%;
   width: 100%;
 }
+
+
+
 
 
