--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ h3 {
 }
 
 h4 {
-  font-size: 20px;
+  font-size: 22px;
+  font-weight: 100;
   color: white;
   text-rendering: optimizeLegibility; 
 }
@@ -43,7 +44,7 @@ p,
 ul,
 ol {
   font-family: 'Helvetica';
-  font-size: 15;
+  font-size: 18px;
 }
 
 .fondo-azul {
@@ -82,46 +83,77 @@ ol {
 
 .contenedor-ppal {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
   width: 100%;
   background-color: rgb(44, 54, 69);   
 }
 
 .contenedor-ensayos {
-  height: 400px;
+  height: 300px;
   background-color: rgb(61, 73, 91);
-  border-radius: 15%;
-  width: 90%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly; 
-}
-
-.imagen-ensayo {
-  /* width: 533.33px;
-  height: 300px; */
-  width: 35%;
-  height: 95%;
+  border-radius: 30px;  
+  border-style: solid;
+  border-color: gray;
+  width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-   
+  align-items: center;
+  margin: 15px; 
+}
+
+.imagen-ensayo {  
+  width: 25%;
+  height: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;  
 }
 
 .imagen-ensayo img {
   width: 100%;
-  border-radius: 10%;
+  border-radius: 30px;border-style: solid;
+  border-color: white;
+  margin: 15px;
 }
 
 .descripcion-ensayo {
   width: 60%;
-  height: 95%;   
+  height: 75%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;  
 }
 
 .contenedor-botones {
-  width: 60%;
-  height: 15%;
+  width: 100%;
+  height: 20%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.boton-ensayo {
+  background-color: #0e6305;
+  color: white;
+  font-size: medium;
+  border-radius: 20px;  
+  text-align: center;
+  border-color: white;  
+  padding: 15px;
+}
+
+.boton-manual {
+  background-color: #b60627;
+  color: white;
+  font-size: medium;
+  border-radius: 20px;
+  padding: 15px;;
+  text-align: center;
+  border-color: white;
 }
 
 
