--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-  font-family: Helvetica, sans-serif;
+  font-family: 'Helvetica', sans-serif;  
 }
 
 header {
@@ -8,7 +8,8 @@ header {
 }
 
 .logo {
-  height: 100px;  
+  height: 100px;
+  width: 250px;  
 }
 
 .titulo {
@@ -17,27 +18,30 @@ header {
 
 h1 {  
   text-align: center; 
-  font-size: 50px;
+  font-size: 60px;
   color: rgba(50, 50, 50, 0.5); 
 }
 
 h2 {  
   text-align: center;
   font-size: 35px;
-  color: rgba(0, 0, 0, 0.7);   
+  color: rgba(0, 0, 0, 0.7); 
+  margin-top: 10px;  
 }
 
 h3 {
   font-size: 25px;
   color: white;
-  text-rendering: optimizeLegibility; 
+  text-rendering: optimizeLegibility;
+  margin: 10px;  
 }
 
 h4 {
   font-size: 22px;
-  font-weight: 100;
+  font-weight: 500;
   color: white;
-  text-rendering: optimizeLegibility; 
+  text-rendering: optimizeLegibility;
+  margin: 15px;  
 }
 
 p,
@@ -45,15 +49,19 @@ ul,
 ol {
   font-family: 'Helvetica';
   font-size: 18px;
+  text-align: justify;
+  line-height: 1.5;
+  margin: 0px;
 }
 
 .fondo-azul {
-  background-color:rgb(44, 54, 69);
+  background-color: rgb(44, 54, 69);
   display: flex;
   flex-direction: row;  
-  justify-content: space-evenly;	
+  justify-content: space-evenly;
+  align-items: center;	
   width: 100%;
-  height: 500px;  
+  height: auto;  
 }
 
 .modulos {
@@ -65,20 +73,23 @@ ol {
 
 .titulos-modulos {
   text-align: center;
-  height: 100px;  	 
-  width: 100%;   
+  height: 50px;  	 
+  width: 100%;
+  margin-bottom: 10px;
+  margin-top: 20px;   
 }
 
-.imagen-modulo {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+.imagen-modulo { 
+  align-items: center;
   width: 100%;
 }
 
-.imagen-modulo img{
-  border-radius: 10%;
-  width: 100%;
+.imagen-modulo img {
+  border-radius: 10%;  
+  align-items: center;  
+  width: 250px;
+  height: 250px;
+  margin: 15px;  
 }
 
 .contenedor-ppal {
@@ -100,8 +111,8 @@ ol {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
-  margin: 15px; 
+  align-items: center;  
+  margin-bottom: 30px; 
 }
 
 .imagen-ensayo {  
@@ -156,7 +167,31 @@ ol {
   border-color: white;
 }
 
+.footer {
+  background-color: white; 
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items:center;
+  width: 100%;
+  height: 180px;
+}
 
+.footer > div {
+  display: flex;
+  text-align: center;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+div > img > a {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
 
 
