--- a/style2.css
+++ b/style2.css
@@ -38,7 +38,7 @@ h3 {
 h4 {
   font-size: 22px;
   font-weight: 500;
-  color:rgb(64, 63, 63);
+  color: whitesmoke;
   text-rendering: optimizeLegibility;
   margin: 15px;  
 }
@@ -99,12 +99,14 @@ ol {
   justify-content: flex-end;
   align-items: center;
   width: 100%;
-  background-color: lightgray;   
+  /* background-color: lightgray; */
+  background-image: url("./imagenes/background.jpg");
+   
 }
 
 .contenedor-ensayos {
   height: 300px;
-  background-color: rgb(49, 65, 82); 
+  background-color: rgba(49, 65, 82, 0.589); 
   border-radius: 30px;  
   border-style: solid;
   border-color: gray;
