--- a/style2.css
+++ b/style2.css
@@ -115,8 +115,8 @@ ol {
 }
 
 .imagen-ensayo {  
-  width: 25%;
-  height: 90%;
+  width: 250px;
+  height: 250px;
   display: flex;
   flex-direction: row;
   justify-content: center;  
