--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,20 @@
 *{
   font-family: 'Helvetica', sans-serif;
-  margin: 0;  
+  margin: 0;
+  max-width: 1980px;  
+}
+
+/* Responsive design with Media Queries */
+@media screen and (max-width: 480px){
+  #header{
+      height: auto;
+  }
+  #main{
+      width: auto;
+  }
+  #barra_lateral{
+      display:none;
+  }
 }
 
 header {
@@ -78,7 +92,7 @@ ol {
 
 .imagen-modulo { 
   align-items: center;
-  width: 100%;
+  width: 100%;  
 }
 
 .imagen-modulo img {
@@ -86,7 +100,9 @@ ol {
   align-items: center;  
   width: 250px;
   height: 250px;
-  margin: 15px;  
+  margin: 15px;
+  max-width: 100%;
+  height: auto;  
 }
 
 .contenedor-ppal {
@@ -124,6 +140,8 @@ ol {
 
 .imagen-ensayo img {
   width: 100%;
+  max-width: 100%;
+  height: auto;
   border-radius: 30px;border-style: solid;
   border-color: white;
   margin: 15px;
